feat(14-SID): System 2 price flow